fix: dashboard tooltip alignment

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -413,3 +413,12 @@
   padding: 10px;
 }
 //user profile ends
+
+// center tooltip  
+.centerToolTip {
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
